<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nano2"
            android:inputType="text"
            android:minHeight="48dp"
            tools:text="@string/nano" />

        <LinearLayout
            android:id="@+id/linear_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/tweet"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="DEV twitter"
                android:hint="@string/darkenin"
                android:inputType="text"
                tools:text="@string/type" />

        </LinearLayout>

        <TextView
            android:layout_width="346dp"
            android:layout_height="34dp"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:text="@string/amp2"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <CheckBox
                android:id="@+id/blackbox_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/hippo"
                android:textSize="16sp"
                tools:text="@string/hippo" />

            <CheckBox
                android:id="@+id/blackbox_checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/mud"
                android:textSize="16sp"
                tools:text="@string/mud" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/blackbox_checkbox3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/otter"
                android:textSize="16sp"
                tools:text="@string/otter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/queen3"
                tools:text="@string/queen3" />

            <EditText
                android:id="@+id/edit_monarch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="Monarchy"
                android:hint="@string/queen"
                android:inputType="text"
                android:textColor="@color/black"
                tools:text="@string/queen" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/groupradio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiogroup" />

            <RadioButton
                android:id="@+id/kotlin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/kotlin"
                android:textSize="20sp" />

            <RadioButton

                android:id="@+id/java"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/java"
                android:textSize="20sp" />


        </RadioGroup>

        <ScrollView
            android:layout_width="379dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/teal_200" />
        </ScrollView>

        <Button
            android:id="@+id/prevAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            tools:text="@string/prev" />

        <LinearLayout
            android:layout_width="264dp"
            android:layout_height="98dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/score"
                android:textAlignment="center"
                android:textFontWeight="@integer/material_motion_duration_long_1"
                android:textSize="56sp" />

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/next"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>